# cld2-cmake

./: CMakeLists.txt  README.md
internal/: cld2_do_score.cc  cld2_dynamic_data_tool.cc  cld2_generated_octa2_dummy.cc  cld2_unittest.cc  cld2_unittest_full.cc  cld_generated_cjk_uni_prop_80.cc  compact_lang_det.cc  compact_lang_det_hint_code.h  compact_lang_det_impl.h  compact_lang_det_test.cc  scoreonescriptspan.cc  scoreonescriptspan.h  scoreutf8text.cc  unittest_data.h
test/: lang.cpp
